完成需求4631 限制富文本上传图片大小

--- a/weapp/static_v2/js/view/weixin_edit_news_view/template.html
+++ b/weapp/static_v2/js/view/weixin_edit_news_view/template.html
@@ -51,7 +51,7 @@
 
                     <div class="control-group mt5" style="height:330px;">
                         <span class="star_show"></span>
-                        <label class="" for="text">正文<span style="color:#bebebe;margin-left:6px;">(上传图片要求宽度在480-620之间，高度小于等于960)</span></label>
+                        <label class="" for="text">正文<span style="color:#bebebe;margin-left:6px;">(上传图片要求宽度在480-620之间,高度小于等于960,大小不超过500K)</span></label>
                         <div class="controls xui-richHtml">
                             <div class="xa-weixin-edit-textAreaBox" style="margin-left:44px;">
                                 <textarea rows="4" class="input-xlarge" id="text" name="text"
