--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -115,7 +115,7 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 {% endblock %}
 
-{#{% ifequal component.type 'appkit.signdescription' %}#}
+{% ifequal component.type 'appkit.signdescription' %}
 <div class="wui-SignPageDiv">
     <div class="wui-TopPaneDiv">
         <div class="wui-UserPhotoDiv">
@@ -145,4 +145,4 @@
         <div class="wui-SignDescriptionDiv Chr">今日可以领取<span class="Points">x</span>积分，"<span>5元优惠劵</span>"一张</div>
     </div>
 </div>
-{#{% endifequal %}#}
+{% endifequal %}
