--- a/weapp/termite/static/termite_js/app/component/wepage/notice/notice.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/notice/notice.html
@@ -4,6 +4,7 @@
 <div 
 	class="wui-notice"
     data-component-cid="{{component.cid}}"
+    data-ui-role="notice"
 >
     <div class="wa-content wui-content">
    		<span class="wa-inner-title wui-inner-title pl10" >公告：{{component.model.title}}</span>
