--- a/weapp/mall/templates/mall/editor/red_envelope_participences.html
+++ b/weapp/mall/templates/mall/editor/red_envelope_participences.html
@@ -56,6 +56,16 @@
 		</div>
 	</div>
     <div class="panel panel-default xui-tableBox">
+		<div class="fans_data_title"><div class="fans_data_name ml10 mt10 mr5">{{ red_envelope_name }}</div>
+			<div class="fans_data_date">({{ red_envelope_start_time }}至{{ red_envelope_end_time }})</div>
+		</div>
+		<ul class="fans_data_ul xui-weixin-outlinePage ml10 mt10">
+			<li><em>{{ new_member_count }}</em><br>新关注人数</li>
+			<li><em>{{ received_count }}</em><br>领取人数</li>
+			<li><em>{{ consumption_sum }}</em><br>产生消费额</li>
+			<li><em>{{ total_use_count }}</em><br>使用人数<div style="margin-left: 120px;margin-top: -17px;text-decoration: underline;"><a>使用记录</a></div></li>
+		</ul>
+		<div class="ml10 mt10" style="font-weight: bold">{% if receive_method %}通过图文方式领取{% else %}通过成交订单方式领取{% endif %}</div>
         <div
             class="panel-body panel-table p0 mt10"
             data-ui-role="advanced-table"
