--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/shopping_cart.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/shopping_cart.html
@@ -382,8 +382,6 @@ $(document).ready(function() {
         // 设置显示价格
         $(this).find('.xt-productPrice').text('￥'+price);
     });
-
-
     //动态修改库存
     function getProductStocks(){
         W.getApi().call({
@@ -402,11 +400,11 @@ $(document).ready(function() {
                         var count_per_purchase = $(this).data('product-count-per-purchase');
                         var maxCount = 0;
                         if (data[model_id].stock_type) {
+                            $(this).parents('.xa-product').data('stocks', data[model_id].stocks);
                             if (count_per_purchase > 0 && count_per_purchase < data[model_id].stocks){
                                 maxCount = count_per_purchase;
                             }else{
                                 maxCount = data[model_id].stocks;
-                                $(this).parents('.xa-product').data('stocks', maxCount);
                             }
                         }else {
                             if (count_per_purchase > 0){
