--- a/weapp/static_v2/css/bootstrap_enhance.css
+++ b/weapp/static_v2/css/bootstrap_enhance.css
@@ -199,6 +199,7 @@ input[type="text"]{
 .table>thead>tr>th{
 	border:none;
 	font-weight: bold;
+	white-space: nowrap;
 }
 /*表头颜色*/
 .xb-theadBg thead{
