实时消息、消息详情中“有备注”“星标信息”商家的头像和名称 去掉链接功能

--- a/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
@@ -202,7 +202,7 @@
 						<div class="xui-i-wrapRight">
 							<p class="pl20 fl mr20 xui-ellipsis-1">{{html message.sender_username}}</p>
 							<div class="imgBox disTc pr xui-i-imgBox fr">
-							<a href="{{if message.member_id}}/member/detail/?id=${message.member_id}{{else}}javascript:void(0);{{/if}}" {{if message.member_id}}target="_blank"{{/if}}><img src="${message.user_icon}" width="60" height="60"/></a>
+							<a><img src="${message.user_icon}" width="60" height="60"/></a>
 							</div>
 							
 						</div>
