签到  修改workbench之前

--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -63,6 +63,27 @@
 					</div>
 					{{/if}}
 
+					{{if (field.type == 'text_with_annotation_v2')}}
+					<div class="propertyGroup_property_textField propertyGroup_property_horizontalField">
+						<div class="propertyGroup_property_label {{if field.validate}}star_show{{/if}}">${field.displayName}</div>
+						<div class="propertyGroup_property_input">
+							<input
+								type="text"
+								style="width:${field.size};"
+								class="input-small xui-propertyGroup-input"
+								data-field="${field.name}"
+								value="{{if field.placeholder != model.get(field.name)}}${model.get(field.name)}{{/if}}"
+								placeholder="${field.placeholder}"
+								{{if field.maxLength}}maxlength="${field.maxLength}"{{/if}}
+								{{if field.validate}}{{html field.validate}}{{/if}} />
+							{{if field.annotation}}
+								{{html field.annotation}}
+							{{/if}}
+							<div class="errorHint"></div>
+						</div>
+					</div>
+					{{/if}}
+
 					{{if (field.type == 'title_with_annotation')}}
 					<div class="propertyGroup_property_textField propertyGroup_property_horizontalField">
 						<div class="propertyGroup_property_label">${field.displayName}</div>
@@ -344,7 +365,33 @@
 					</div>
 					{{/if}}
 
-					
+                    {{if (field.type == 'image_dialog_select')}}
+                    <div class="propertyGroup_property_dialogSelectField propertyGroup_property_horizontalField">
+                        <div class="propertyGroup_property_label {{if field.validate}}star_show{{/if}}">${field.displayName}</div>
+                        <div class="propertyGroup_property_input" style="position:relative;">
+                            {{html W.data.getDynamicComponentDataForDialogSelectControl(component, field)}}
+                            <input data-field="${field.name}" name="${field.name}" type="hidden" />
+                                <button class="btn btn-small xui-i-triggerButton" data-target-dialog="${field.dialog}" data-dialog-parameter="${field.dialogParameter}">
+                                    {{if component.model.get(field.name)}}
+                                        ${field.triggerButton.hasdata}
+                                    {{else}}
+                                        ${field.triggerButton.nodata}
+                                    {{/if}}
+                                </button>
+
+                            {{if field.help}}
+                            <div style="color: #666;">
+                                {{html field.help.replace(/\n/g, "<br/>")}}
+                            </div>
+                            {{/if}}
+
+                            {{if field.isShowCloseButton}}
+                                <button type="button" class="deleteImage xa-deleteImageButton xui-deleteImageButton" style="display:none;"><span>&times;</span></button>
+                            {{/if}}
+                        </div>
+                    </div>
+                    {{/if}}
+
 					{{if (field.type == 'rich_text')}}
 					<div class="propertyGroup_property_richTextField propertyGroup_property_horizontalField">
 						{{if (field.displayName)}}
@@ -414,6 +461,23 @@
 					</div>
 					{{/if}}
 
+                    {{if (field.type == 'prize_selector_v4')}}
+                    <div class="propertyGroup_property_prizeSelectorField propertyGroup_property_horizontalField">
+                        <div class="propertyGroup_property_label">${field.displayName}</div>
+                        <div class="propertyGroup_property_input xa-thirdPartyPlugin" data-plugin="prize_selector_v4" data-field="${field.name}">
+                            <div
+                                data-ui-role="apps-prize-selector-v4"
+                                data-prize='${JSON.stringify(component.model.get(field.name))}'
+                            ></div>
+                        {{if field.help}}
+                        <div style="color: #888;">
+                            {{html field.help.replace(/\n/g, "<br/>")}}
+                        </div>
+                        {{/if}}
+                        </div>
+
+                    </div>
+                    {{/if}}
 
 					{{if (field.type == 'dynamic-generated-control')}}
 					{{if field.displayName}}
@@ -495,6 +559,27 @@
                                 </div>
                                 {{/if}}
 
+								{{if (dynamicComponentField.type == 'text_with_annotation_v2')}}
+                                <div class="propertyGroup_property_textField propertyGroup_property_horizontalField">
+                                    <div class="propertyGroup_property_label {{if dynamicComponentField.validate}}star_show{{/if}}">${dynamicComponentField.displayName}</div>
+                                    <div class="propertyGroup_property_input">
+                                        <input
+                                            type="text"
+                                            style="width:${dynamicComponentField.size};"
+                                            class="input-small xui-propertyGroup-input"
+                                            data-field="${dynamicComponentField.name}"
+                                            value="{{if dynamicComponentField.placeholder != dynamicComponent.model.get(dynamicComponentField.name)}}${dynamicComponent.model.get(dynamicComponentField.name)}{{/if}}"
+                                            placeholder="${dynamicComponentField.placeholder}"
+                                            {{if dynamicComponentField.maxLength}}maxlength="${dynamicComponentField.maxLength}"{{/if}}
+                                            {{if dynamicComponentField.validate}}{{html dynamicComponentField.validate}}{{/if}} />
+                                        {{if dynamicComponentField.annotation}}
+                                            {{html dynamicComponentField.annotation}}
+                                        {{/if}}
+                                        <div class="errorHint"></div>
+                                    </div>
+                                </div>
+                                {{/if}}
+
 								{{if (dynamicComponentField.type == 'boolean')}}
 								<div class="propertyGroup_property_booleanField propertyGroup_property_horizontalField">
 									<div class="propertyGroup_property_label">${dynamicComponentField.displayName}</div>
@@ -525,6 +610,25 @@
                                             data-ui-role="apps-prize-selector-v3"
                                             data-prize='${JSON.stringify(dynamicComponent.model.get(dynamicComponentField.name))}'
                                         ></div>
+                                    </div>
+                                </div>
+                                {{/if}}
+
+                                {{if (dynamicComponentField.type == 'prize_selector_v4')}}
+                                <div class="propertyGroup_property_prizeSelectorField propertyGroup_property_horizontalField">
+                                    <div class="propertyGroup_property_label">${dynamicComponentField.displayName}</div>
+                                    <div class="propertyGroup_property_input xa-thirdPartyPlugin" data-plugin="prize_selector_v4" data-field="${dynamicComponentField.name}">
+                                        <div
+                                            data-ui-role="apps-prize-selector-v4"
+                                            data-prize='${JSON.stringify(dynamicComponent.model.get(dynamicComponentField.name))}'
+                                        ></div>
+                                    {{if dynamicComponentField.help}}
+                                    <div>
+                                        {{html dynamicComponentField.help.replace(/\n/g, "<br/>")}}
+                                    </div>
+                                    <div>追加库存</div>
+                                    {{/if}}
+
                                     </div>
                                 </div>
                                 {{/if}}
