优惠劵left界面，积分动态，优惠劵动态（优惠券没验证）

--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -142,7 +142,7 @@
     </div>
 
     <div class="wui-SignDescriptionDiv">
-        <div class="wui-SignDescriptionDiv Chr">今日可以领取<span class="Points">x</span>积分，"<span>5元优惠劵</span>"一张</div>
+        <div class="wui-SignDescriptionDiv Chr">今日可以领取<span class="daily_points">x</span>积分，"<span class="daily_prizes">5元优惠劵</span>"一张</div>
     </div>
 </div>
 {% endifequal %}
