--- a/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
@@ -200,7 +200,7 @@
 							</div>
 						</div>
 						<div class="xui-i-wrapRight">
-							<p class="pl20 fl mr20 xui-ellipsis-1">{{html message.sender_username}}</p>
+							<p class="pl20 fl mr20 xui-ellipsis-1">{{html message.mp_username}}</p>
 							<div class="imgBox disTc pr xui-i-imgBox fr">
 							<a><img src="${message.user_icon}" width="60" height="60"/></a>
 							</div>
