--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -519,7 +519,9 @@ $(document).ready(function() {
 	 		W.resource.member.BatchUpdateMemberGrade.post({
 	 			data: args,
 	 			success: function(data) {
-	                 dataView.reload();
+	 				$('#xa-selectAll').attr('checked', false);	
+					$('#all').attr('checked', false);	
+	                dataView.reload();
 	            },
 	            error: function(response) {
 	                W.getErrorHintView().show('加载失败！请刷新页面重试！');
