修改merage 导致的bug

--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -459,6 +459,8 @@ $(document).ready(function() {
 			dataView:dataView
 		})
         memberTagsUpdateView.render();
+		$('#xa-selectAll').attr('checked', false);	
+		$('#all').attr('checked', false);	
 
 	});
 	// 修改分组
@@ -491,6 +493,8 @@ $(document).ready(function() {
 
 		})
         memberTagsUpdateView.render();
+        $('#xa-selectAll').attr('checked', false);	
+		$('#all').attr('checked', false);	
 	});
 
 	// 修改等级
